--- a/comp1238.md
+++ b/comp1238.md
@@ -1,7 +1,7 @@
 ## Week 1 - History
-- 
-- 
-- 
+- Writing first happened ~5,000 years ago on clay tablets in Mesopotamia
+- Cuneiform is wedge-shaped marks pressed into clay
+- The Gutenberg Press introduced metal moveable type, revolutionized printing
 ## Week 2 - Bits and Bytes
 - 
 - 
