--- a/comp1238.md
+++ b/comp1238.md
@@ -3,9 +3,13 @@
 - Cuneiform is wedge-shaped marks pressed into clay
 - The Gutenberg Press introduced metal moveable type, revolutionized printing
 ## Week 2 - Bits and Bytes
-- 
-- 
-- 
+- A Byte is a group of 8 bits (binary digits, base 2)
+- Volatile memory loses its data when power is off (RAM)
+- Non-Volatile memory retains data when power is off (storage devices, SSD)
+- ASCII table maps specific numbers to specific characters
+- Text files are interpreted as characters using ASCII, while binary files aren't intended to be read as text
+- Morse Code is historic binary use, neat.
+- Decimal is base 10, Binary is base 2, Hexadecimal is base 16
 ## Week 3 - Structure of Text
 - 
 - 
