--- a/comp1238.md
+++ b/comp1238.md
@@ -11,8 +11,9 @@
 - Morse Code is historic binary use, neat.
 - Decimal is base 10, Binary is base 2, Hexadecimal is base 16
 ## Week 3 - Structure of Text
-- 
-- 
+- Markdown is a markup language with simple syntax for formatting, examples include \# Title, \_italic_, \- list item
+- HTML, HyperText Markup Language, is more complicated and uses tags, examples include &lt;p&gt; (paragraph) and &lt;ul&gt; (unordered list)
+- Special characters are non-alphanumeric symbols with specific purposes in specific languages. "Escaping" lets us see these characters. \ in Markdown, and character entities in HTML (such as \&lt; for &lt;)
 - 
 ## Week 4 - Keyboards and Editors
 - 
