--- a/comp1238.md
+++ b/comp1238.md
@@ -11,10 +11,14 @@
 - Morse Code is historic binary use, neat.
 - Decimal is base 10, Binary is base 2, Hexadecimal is base 16
 ## Week 3 - Structure of Text
-- Markdown is a markup language with simple syntax for formatting, examples include \# Title, \_italic_, \- list item
-- HTML, HyperText Markup Language, is more complicated and uses tags, examples include &lt;p&gt; (paragraph) and &lt;ul&gt; (unordered list)
-- Special characters are non-alphanumeric symbols with specific purposes in specific languages. "Escaping" lets us see these characters. \ in Markdown, and character entities in HTML (such as \&lt; for &lt;)
-- 
+- Markup Languages
+    - Markdown is a markup language with simple syntax for formatting, examples include: \# Title, \_italic_ , \- list item
+    - HTML, HyperText Markup Language, is more complicated and uses tags, examples include: &lt;p&gt; (paragraph) and &lt;ul&gt; (unordered list)
+    - Special characters are non-alphanumeric symbols with specific purposes in specific languages. "Escaping" lets us see these characters. \ in Markdown, and character entities in HTML (such as \&lt; for &lt;)
+- Structured Data
+    - JSON is human-readable, format {"key":"value"}
+    - XML, Extensible Markup Language, similar to HTML, represents data, uses tags: &lt;tag&gt;value&lt;/tag&gt;
+- Unicode is like ASCII but has larger numbers and more characters. UTF-8 is the most popular
 ## Week 4 - Keyboards and Editors
 - 
 - 
