--- a/comp1238.md
+++ b/comp1238.md
@@ -20,9 +20,13 @@
     - XML, Extensible Markup Language, similar to HTML, represents data, uses tags: &lt;tag&gt;value&lt;/tag&gt;
 - Unicode is like ASCII but has larger numbers and more characters. UTF-8 is the most popular
 ## Week 4 - Keyboards and Editors
-- 
-- 
-- 
+- QWERTY is the most common (to me, at least) keyboard layout. AZERTY and Dvorak also exist.
+- Modifier keys allow certain keys to do different things, e.g., holding the SHIFT key can turn a into A
+- Text Editors are simple like Notepad, Word Processors are in-depth like Microsoft Word.
+        - Popular text editors include: VIM (with edit command :q!), VSCode.
+- IDEs, Integrated development environments, let you do a lot of stuff, example is WebStorm
+- For searching, CTRL+F lets you find text. \* is a wildcard for any character sequence. Regex (regular expressions) allow for pattern matching.
+- GitHub pages host web pages (like this one!)
 ## Week 5 - CLI
 - 
 - 
