--- a/comp1238.md
+++ b/comp1238.md
@@ -28,6 +28,11 @@
 - For searching, CTRL+F lets you find text. \* is a wildcard for any character sequence. Regex (regular expressions) allow for pattern matching.
 - GitHub pages host web pages (like this one!)
 ## Week 5 - CLI
-- 
-- 
-- 
+- Command Line Interfaces (CLI), came from teletype machines that printed on paper, later on screens. Commands were short.
+- CLI can be faster for some things than GUIs, automating through scripting, low-bandwidth remote capability.
+- Lots of navigation and file management commands such as: "ls" for listing directory files, \"-a" after "ls" listing all entries for files (including hidden things), "cat" for displaying file contents. Commmands can be combined!
+- Secure Shell (SSH) lets you securely connect to computers remotely, command line access.
+- File Transfer Protocols
+        - scp: securely copy files
+        - sftp: secure file transfer protocol
+- Windows Subsystem for Linux (WSL) lets you run Linux within Windows
